@@ -1,3 +1,7 @@
+2020-10-09  Charlie Zender  <zender@uci.edu>
+
+	* Fix grid inferral error for last interface boundary (grid_corner_lat) of N2S RLL grids
+
 2020-10-08  Charlie Zender  <zender@uci.edu>
 
 	* Replace old benchmark case famipc5_ne30_v0.3_00003 by 20180129.DECKv1b_piControl.ne30_oEC.edison
